--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html>
 <head>
 <title>
-
+My adveture with coding
 </title>
 </head>
-
+I started my adventure in primary school with a programing site called scratch, it was an introduction to programming. When i got into 
+  secondary school i went back to doing scratch but i went further then i had before. After scratch we moved onto improving our typing 
+  speed and learnt ho to use computers better. In third year we started to learn python it was a lot different to using blocks now we 
+  had to learn words and symbols, we were also using raspberry pies and microbits which was an interesting exsperience  
 <body>
   <P></p>
 
